--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.5.1
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.6.1
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
